--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,3 +1,15 @@
+/*
+A Multiline Comment
+*/
+
+//
+// A Single Comment
+//
+
+/*!
+A Multiline  Comment that is preserved
+*/
+
 body {
 	padding: 70px;
 }
